# plaatbook

./: .editorconfig  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: server.yml  web.yml
docs/: vscode.md
server/: .gitignore  Cargo.toml  Makefile  build.rs  check_copyright.sh  deny.toml  meta.sh  nextest.toml  openapi.yml  rust-toolchain.toml
server/migrations/: 20241202112213_create_users_table.sql  20241202152935_create_sessions_table.sql
server/src/: consts.rs  database.rs  main.rs  test_utils.rs  utils.rs
server/src/controllers/: auth.rs  mod.rs  posts.rs  search.rs  sessions.rs  users.rs
server/src/layers/: auth.rs  mod.rs
server/src/models/: mod.rs  post.rs  post_interaction.rs  session.rs  user.rs
web/: .gitignore  Makefile  check_copyright.sh  eslint.config.js  index.html  meta.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/: api.html  manifest.json
web/src/: app.tsx  consts.ts  global.d.ts  index.scss  index.tsx  router.tsx  utils.ts
web/src/components/: create-post.tsx  field.tsx  icons.tsx  infinite-list.tsx  menu.tsx  notification.tsx  post-create-form.tsx  post.tsx  user-edit-form.tsx  user.tsx
web/src/components/dialogs/: confirm-dialog.tsx  login-dialog.tsx  post-edit-dialog.tsx  post-reply-dialog.tsx  post-share-dialog.tsx  user-edit-dialog.tsx
web/src/components/forms/: login-form.tsx  post-create-form.tsx  user-edit-form.tsx
web/src/components/modals/: confirm-modal.tsx  post-edit-modal.tsx  post-reply-modal.tsx  post-share-modal.tsx  user-edit-modal.tsx
web/src/models/: index.ts  post.ts  session.ts  user.ts
web/src/pages/: about.tsx  home.tsx  not-found.tsx  search.tsx  settings.tsx
web/src/pages/auth/: login.tsx  register.tsx
web/src/pages/posts/: show.tsx
web/src/pages/users/: show.tsx
web/src/services/: auth.service.ts  dialog.service.tsx  posts.service.ts  search.service.ts  users.service.ts
