[package]
name = "plaatbook"
version = "0.1.0"
authors = ["PlaatSoft <info@plaatsoft.nl>"]
edition = "2021"
license = "MIT"

[dependencies]
base64 = { git = "https://github.com/bplaat/crates.git" }
from_enum = { git = "https://github.com/bplaat/crates.git" }
getrandom = { git = "https://github.com/bplaat/crates.git" }
http = { git = "https://github.com/bplaat/crates.git", features = ["json"] }
pbkdf2 = { git = "https://github.com/bplaat/crates.git" }
router = { git = "https://github.com/bplaat/crates.git" }
sqlite = { git = "https://github.com/bplaat/crates.git", features = [
    "derive",
    "uuid",
    "time",
] }
time = { git = "https://github.com/bplaat/crates.git", features = ["serde"] }
uuid = { git = "https://github.com/bplaat/crates.git", features = [
    "v7",
    "serde",
] }
validate = { git = "https://github.com/bplaat/crates.git", features = [
    "derive",
    "email",
    "serde",
] }

regex = { version = "1.11", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
simple-useragent = "0.1.1"

[build-dependencies]
openapi-generator = { git = "https://github.com/bplaat/crates.git" }

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
panic = "abort"
overflow-checks = false

[lints.clippy]
unwrap_used = "deny"
