[package]
name = "plaatbook"
version = "0.1.0"
authors = ["PlaatSoft <info@plaatsoft.nl>"]
edition = "2021"
license = "MIT"

[dependencies]
bsqlite = { version = "0.1.2", features = ["uuid", "chrono"] }
from_enum = { git = "https://github.com/bplaat/crates.git" }
simple-useragent = "0.1.2"
small-http = { version = "0.2.0", features = ["json"] }
small-router = "0.2.0"
pbkdf2 = { git = "https://github.com/bplaat/crates.git" }
validate = { git = "https://github.com/bplaat/crates.git", features = [
    "email",
    "serde",
] }

base64 = "0.22"
const_format = "0.2"
chrono = { version = "0.4", default-features = false, features = [
    "now",
    "serde",
] }
getrandom = "0.3"
uuid = { version = "1.0", features = ["v7", "serde"] }
regex = { version = "1.11", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"

[build-dependencies]
openapi-generator = { git = "https://github.com/bplaat/crates.git" }

[patch.crates-io]
chrono = { git = "https://github.com/bplaat/crates.git" }
getrandom = { git = "https://github.com/bplaat/crates.git" }
libsqlite3-sys = { git = "https://github.com/bplaat/crates.git" }
threadpool = { git = "https://github.com/bplaat/crates.git" }
url = { git = "https://github.com/bplaat/crates.git" }
uuid = { git = "https://github.com/bplaat/crates.git" }

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
panic = "abort"
overflow-checks = false

[lints.clippy]
unwrap_used = "deny"
